# ur_sim

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  initial_positions.yaml  ur5_controllers_gripper.yaml
launch/: custom_node_real_hardware.launch.py  final_project.launch.py  real_hardware.launch.py  spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  test_ik.launch.py  view_ur5_camera.launch.py
launch/config/: launch_config.json
meshes/sensors/camera/: kinetic.dae
models/green_cube/: model.sdf
models/mini_stacking_box/: model.config  model.sdf
models/mini_stacking_box/meshes/: mini_stacking_box.dae
models/robot_base/: model.sdf
models/screwdriver/: model.config  model.sdf
models/screwdriver/meshes/: screwdriver.dae
models/visual_marker/BchThin_0000/: model.sdf
models/visual_marker/BchThin_0006/: model.config:Zone.Identifier
rviz/: view_ur5_camera.rviz
src/: moveit_pose_action_server.cpp  test_ik.cpp  test_ik_real.cpp
urdf/: camera.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5.ros2_control.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
worlds/: coke_world.world  test_world_1.world  test_world_10.world  test_world_2.world  test_world_3.world  test_world_4.world  test_world_5.world  test_world_6.world  test_world_7.world  test_world_8.world  test_world_9.world  test_world_find_object.world  world1.world  world2.world  world3.sdf  world3.world  world4.world  world5.world  world_blank.world  world_default.world  world_duplicate.world
